--- a/Edu_Store/Edu_Store/Views/Home/About.cshtml
+++ b/Edu_Store/Edu_Store/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿
 @{
     ViewBag.Title = "About";
-    
+    ViewData["ActiveAboutNavLink"] = "active";
+
 }
 
 <div class="intro_wrapper">
@@ -24,98 +25,6 @@
 
 
 
-<section class="login_signup_option">
-    <div class="l-modal is-hidden--off-flow js-modal-shopify">
-        <div class="l-modal__shadow js-modal-hide"></div>
-        <div class="login_popup login_modal_body">
-            <div class="Popup_title d-flex justify-content-between">
-                <h2 class="hidden">&nbsp;</h2>
-                <!-- Nav tabs -->
-                <div class="row">
-                    <div class="col-12 col-lg-12 col-md-12 col-lg-12 login_option_btn">
-                        <ul class="nav nav-tabs" role="tablist">
-                            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#login" role="tab">Login</a></li>
-                            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#panel2" role="tab">Register</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-12 col-lg-12 col-md-12 col-lg-12">
-                        <!-- Tab panels -->
-                        <div class="tab-content card">
-                            <!--Login-->
-                            <div class="tab-pane fade in show active" id="login" role="tabpanel">
-                                <form action="#">
-                                    <div class="row">
-                                        <div class="col-12 col-lg-12 col-md-12 col-lg-12">
-                                            <div class="form-group">
-                                                <label class="control-label">Email</label>
-                                                <input type="email" class="form-control" placeholder="Username">
-                                            </div>
-                                        </div>
-                                        <div class="col-12 col-lg-12 col-md-12 col-lg-12">
-                                            <div class="form-group">
-                                                <label class="control-label">Password</label>
-                                                <input type="password" class="form-control" placeholder="Password">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12 col-lg-12 col-md-12 col-lg-12 d-flex justify-content-between login_option">
-                                            <a href="forgot-password.html" title="" class="forget_pass">Forget Password ?</a>
-                                            <button type="submit" class="btn btn-default login_btn">Login</button>
-                                        </div>
-                                        <div class="col-12 col-lg-12 col-md-12 col-lg-12">
-                                            <div class="social_login">
-                                                <div class="social_items">
-                                                    <button class="google_login google">Login Google</button>
-                                                    <button class="google_login facebook">Login Facebook</button>
-                                                    <button class="google_login twitter">Login Twitter</button>
-                                                    <button class="google_login linkdin">Login Linkdin</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <!--/.Panel 1-->
-                            <!--Panel 2-->
-                            <div class="tab-pane fade" id="panel2" role="tabpanel">
-                                <form action="#" class="register">
-                                    <div class="row">
-                                        <div class="col-12 col-lg-12 col-md-12 col-lg-12">
-                                            <div class="form-group">
-                                                <label class="control-label">Name</label>
-                                                <input type="text" class="form-control" placeholder="Username">
-                                            </div>
-                                        </div>
-                                        <div class="col-12 col-lg-12 col-md-12 col-lg-12">
-                                            <div class="form-group">
-                                                <label class="control-label">Email</label>
-                                                <input type="email" class="form-control" placeholder="Email">
-                                            </div>
-                                        </div>
-                                        <div class="col-12 col-lg-12 col-md-12 col-lg-12">
-                                            <div class="form-group">
-                                                <label class="control-label">Password</label>
-                                                <input type="password" class="form-control" placeholder="Password">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12 col-lg-12 col-md-12 col-lg-12 d-flex justify-content-between login_option">
-                                            <button type="submit" class="btn btn-default login_btn">Register</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div><!--/.Panel 2-->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>  <!-- End Login Signup Option -->
-
-
 
 
 <section class="about_us">
@@ -129,14 +38,14 @@
             </div>
             <div class="col-12 col-sm-12 col-md-5 col-lg-5 p-0">
                 <div class="banner_about">
-                    <img src="images/banner/about_thinking.jpg" alt="" class="img-fluid">
+                    <img src="/images/banner/about_thinking.jpg" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
         <div class="row about_content_wrapper">
             <div class="col-12 col-sm-12 col-md-5 col-lg-5 p-0">
                 <div class="about_banner_down">
-                    <img src="images/blog/blog_3.jpg" alt="" class="img-fluid">
+                    <img src="/images/blog/blog_3.jpg" alt="" class="img-fluid">
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-7 col-lg-7">
@@ -307,7 +216,7 @@
                     <figure>
                         <div class="member-img">
                             <div class="teachars_pro">
-                                <img src="images/team/team_1.jpg" alt="member img" class="img-fluid">
+                                <img src="/images/team/team_1.jpg" alt="member img" class="img-fluid">
                             </div>
                         </div>
                         <figcaption>
@@ -325,7 +234,7 @@
                     <figure>
                         <div class="member-img">
                             <div class="teachars_pro">
-                                <img src="images/team/team_2.jpg" alt="member img" class="img-fluid">
+                                <img src="/images/team/team_2.jpg" alt="member img" class="img-fluid">
                             </div>
                         </div>
                         <figcaption>
@@ -343,7 +252,7 @@
                     <figure>
                         <div class="member-img">
                             <div class="teachars_pro">
-                                <img src="images/team/team_3.jpg" alt="member img" class="img-fluid">
+                                <img src="/images/team/team_3.jpg" alt="member img" class="img-fluid">
                             </div>
                         </div>
                         <figcaption>
@@ -361,7 +270,7 @@
                     <figure>
                         <div class="member-img">
                             <div class="teachars_pro">
-                                <img src="images/team/team_4.jpg" alt="member img" class="img-fluid">
+                                <img src="/images/team/team_4.jpg" alt="member img" class="img-fluid">
                             </div>
                         </div>
                         <figcaption>
@@ -378,7 +287,7 @@
                     <figure>
                         <div class="member-img">
                             <div class="teachars_pro">
-                                <img src="images/team/team_5.jpg" alt="member img" class="img-fluid">
+                                <img src="/images/team/team_5.jpg" alt="member img" class="img-fluid">
                             </div>
                         </div>
                         <figcaption>
@@ -395,7 +304,7 @@
                     <figure>
                         <div class="member-img">
                             <div class="teachars_pro">
-                                <img src="images/team/team_6.jpg" alt="member img" class="img-fluid">
+                                <img src="/images/team/team_6.jpg" alt="member img" class="img-fluid">
                             </div>
                         </div>
                         <figcaption>
@@ -515,7 +424,7 @@
                     <a href="#" title="" class="srtarte_btn">Get Started Now</a>
                 </div>
                 <div class="teamgroup_info_banner">
-                    <img src="images/banner/teamgroup.png" alt="" class="img-fluid">
+                    <img src="/images/banner/teamgroup.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
