--- a/Edu_Store/Edu_Store/Views/Home/Index.cshtml
+++ b/Edu_Store/Edu_Store/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    ViewData[ "ActiveHomeNavLink" ] = "active";
 }
 
 <div class="rev_slider_wrapper">
@@ -9,7 +10,7 @@
 
                 <div class="slider-overlay"></div>
                 <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
-                <img src="images/banner/banner_1.jpg" alt="Sky" class="rev-slidebg" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                <img src="/images/banner/banner_1.jpg" alt="Sky" class="rev-slidebg" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                 <!-- LAYER NR. 1 -->
                 <div class="tp-caption font-lora sfb tp-resizeme letter-space-5 h-p"
                      data-x="['left','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -119,7 +120,7 @@
 
             <li data-index="rs-1708" data-transition="fade" data-slotamount="7" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="1000" data-rotate="0" data-saveperformance="off" data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
                 <div class="slider-overlay"></div>
-                <img src="images/banner/banner_2.jpg" alt="Sky" class="rev-slidebg" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                <img src="/images/banner/banner_2.jpg" alt="Sky" class="rev-slidebg" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                 <!-- LAYER NR. 1 -->
                 <div class="tp-caption font-lora sfb tp-resizeme letter-space-5 h-p"
                      data-x="['left','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -238,7 +239,7 @@
                 <div class="latest_blog_carousel">
                     <div class="single_item single_item_first">
                         <div class="blog-img">
-                            <a href="#"><img src="images/features/features_1.jpg" alt="" class="img-fluid"></a>
+                            <a href="#"><img src="/images/features/features_1.jpg" alt="" class="img-fluid"></a>
                         </div>
                         <div class="blog_title">
                             <span>look At</span>
@@ -249,7 +250,7 @@
 
                     <div class="single_item single_item_center">
                         <div class="blog-img">
-                            <a href="#" title=""><img src="images/features/features_2.jpg" alt="" class="img-fluid"></a>
+                            <a href="#" title=""><img src="/images/features/features_2.jpg" alt="" class="img-fluid"></a>
                         </div>
                         <div class="blog_title">
                             <span>Go To</span>
@@ -260,7 +261,7 @@
 
                     <div class="single_item single_item_last">
                         <div class="blog-img">
-                            <a href="#" title=""><img src="images/features/features_3.jpg" alt="" class="img-fluid"></a>
+                            <a href="#" title=""><img src="/images/features/features_3.jpg" alt="" class="img-fluid"></a>
                         </div>
                         <div class="blog_title">
                             <span>Get Your</span>
@@ -289,7 +290,7 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="#"><img src="/images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">$150</a>
                         </div>
@@ -315,7 +316,7 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="#"><img src="/images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
@@ -339,7 +340,7 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="#"><img src="/images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">120$</a>
                         </div>
@@ -363,7 +364,7 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="#"><img src="/images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">250$</a>
                         </div>
@@ -387,7 +388,7 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="#"><img src="/images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">180$</a>
                         </div>
@@ -411,7 +412,7 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="#"><img src="/images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">130$</a>
                         </div>
@@ -452,7 +453,7 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-7 ml-auto p-0">
                 <div class="banner_learn">
-                    <img src="images/banner/learnstep.jpg" alt="" class="img-fluid">
+                    <img src="/images/banner/learnstep.jpg" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -463,7 +464,7 @@
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-7 col-lg-7">
                     <div class="story_banner">
-                        <img src="images/banner/about_us.png" alt="" class="img-fluid">
+                        <img src="/images/banner/about_us.png" alt="" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-5 col-lg-5">
@@ -499,7 +500,7 @@
             <div class="col-sm-12 events_full_box">
                 <div class="events_single">
                     <div class="event_banner">
-                        <a href="#"><img src="images/events/event_1.jpg" alt="" class="img-fluid"></a>
+                        <a href="#"><img src="/images/events/event_1.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="event_info">
                         <h3><a href="#" title="">OneNote for Windows 10 Essential<br> Training</a></h3>
@@ -527,7 +528,7 @@
                         <p>Lorem ipsum dolor sit amet mollis dapibus arcur donec viverra to phasellus<br> eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et. Ac pena<br> tibus aenean laoreet.</p>
                     </div>
                     <div class="event_banner">
-                        <a href="#"><img src="images/events/event_2.jpg" alt="" class="img-fluid"></a>
+                        <a href="#"><img src="/images/events/event_2.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="event_dete">
                         <span class="date">15</span>
@@ -539,7 +540,7 @@
             <div class="col-sm-12 events_full_box">
                 <div class="events_single">
                     <div class="event_banner">
-                        <a href="#"><img src="images/events/event_3.jpg" alt="" class="img-fluid"></a>
+                        <a href="#"><img src="/images/events/event_3.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="event_info">
                         <h3><a href="#" title="">Robotic Process Automation Tech<br> Primer</a></h3>
@@ -592,21 +593,21 @@
                     <div class="reviewer_info">
                         <div class="carousel_images slider-nav">
                             <div class="restimonial_single_img">
-                                <img src="images/team/review_1.jpg" alt="2" class="img-fluid">
+                                <img src="/images/team/review_1.jpg" alt="2" class="img-fluid">
                                 <div class="name_position">
                                     <span class="name">Michael Jusi</span>
                                     <span>Graphic Student</span>
                                 </div>
                             </div>
                             <div class="restimonial_single_img">
-                                <img src="images/team/review_4.jpg" alt="2" class="img-fluid ">
+                                <img src="/images/team/review_4.jpg" alt="2" class="img-fluid ">
                                 <div class="name_position">
                                     <span class="name">Jhon Smith</span>
                                     <span>Web Student</span>
                                 </div>
                             </div>
                             <div class="restimonial_single_img ">
-                                <img src="images/team/review_3.jpg" alt="2" class="img-fluid">
+                                <img src="/images/team/review_3.jpg" alt="2" class="img-fluid">
                                 <div class="name_position">
                                     <span class="name">James Colins</span>
                                     <span>Graphic Student</span>
@@ -635,7 +636,7 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
                 <div class="single_item single_item_first">
                     <div class="blog-img">
-                        <a href="#" title=""><img src="images/blog/blog_1.jpg" alt="" class="img-fluid"></a>
+                        <a href="#" title=""><img src="/images/blog/blog_1.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
                         <span>LeaderShip Development</span>
@@ -649,7 +650,7 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
                 <div class="single_item single_item_center">
                     <div class="blog-img">
-                        <a href="#" title=""><img src="images/blog/blog_2.jpg" alt="" class="img-fluid"></a>
+                        <a href="#" title=""><img src="/images/blog/blog_2.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
                         <span>LeaderShip Development</span>
@@ -663,7 +664,7 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
                 <div class="single_item single_item_last">
                     <div class="blog-img">
-                        <a href="#" title=""><img src="images/blog/blog_3.jpg" alt="" class="img-fluid"></a>
+                        <a href="#" title=""><img src="/images/blog/blog_3.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
                         <span>LeaderShip Development</span>
@@ -690,17 +691,17 @@
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <ul class="sponsored_company_logos">
-                    <li><img src="images/logos/logo-1.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".1s"></li>
-                    <li><img src="images/logos/logo-2.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".2s"></li>
-                    <li><img src="images/logos/logo-3.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".3s"></li>
-                    <li><img src="images/logos/logo-4.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".6s"></li>
-                    <li><img src="images/logos/logo-5.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s"></li>
+                    <li><img src="/images/logos/logo-1.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".1s"></li>
+                    <li><img src="/images/logos/logo-2.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".2s"></li>
+                    <li><img src="/images/logos/logo-3.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".3s"></li>
+                    <li><img src="/images/logos/logo-4.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".6s"></li>
+                    <li><img src="/images/logos/logo-5.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s"></li>
                 </ul>
                 <ul class="sponsored_company_logos sponsored_company_logos_2">
-                    <li><img src="images/logos/logo-6.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".4s"></li>
-                    <li><img src="images/logos/logo-7.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".3s"></li>
-                    <li><img src="images/logos/logo-8.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".6s"></li>
-                    <li><img src="images/logos/logo-9.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s"></li>
+                    <li><img src="/images/logos/logo-6.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".4s"></li>
+                    <li><img src="/images/logos/logo-7.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".3s"></li>
+                    <li><img src="/images/logos/logo-8.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".6s"></li>
+                    <li><img src="/images/logos/logo-9.png" alt="" class="img-fluid  wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s"></li>
                 </ul>
             </div>
         </div>
