--- a/Edu_Store/Edu_Store/Views/Shared/_Layout.cshtml
+++ b/Edu_Store/Edu_Store/Views/Shared/_Layout.cshtml
@@ -47,11 +47,24 @@
     <![endif]-->
 </head>
 <body>
-    <header class="header_four">
+    @{
+        string HeaderName = string.Empty;
+        if (ViewBag.Title == "About")
+            HeaderName = "header_inner about_page";
+        else if (ViewBag.Title == "Home Page")
+            HeaderName = "header_four";
+
+    }
+
+
+
+    <header class="@HeaderName">
+ 
         <!-- Preloader -->
         <div id="preloader">
             <div id="status">&nbsp;</div>
         </div>
+
         <div class="header_top">
             <div class="container">
                 <div class="row">
@@ -79,19 +92,22 @@
         <div class="edu_nav">
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light bg-faded">
-                    <a class="navbar-brand" href="index-2.html"><img src="images/logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="index-2.html"><img src="/images/logo.png" alt="logo"></a>
                     <div class="collapse navbar-collapse main-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav nav lavalamp ml-auto menu">
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">Home</a>
-                                <ul class="navbar-nav nav mx-auto">
-                                    <li class="nav-item"><a href="index-2.html" class="nav-link">Home Version 01</a></li>
-                                    <li class="nav-item"><a href="index-3.html" class="nav-link">Home Version 02</a></li>
-                                    <li class="nav-item"><a href="index-4.html" class="nav-link">Home Version 03</a></li>
-                                    <li class="nav-item"><a href="index-5.html" class="nav-link">Home Version 04</a></li>
-                                </ul>
+                                @if( ViewBag.Title == "Home Page" )
+                                {
+                                    <a href="#" class="nav-link @(ViewData["ActiveHomeNavLink"] ?? string.Empty) as string" >Home</a>
+                                }
+                                else
+                                {
+
+                                    <a href="/" class="nav-link @(ViewData[ "ActiveHomeNavLink" ] ?? string.Empty) as string">Home</a>
+                                }
+
                             </li>
-                            <li class="nav-item"><a asp-action="About" asp-controller="Home" class="nav-link">About</a></li>
+                            <li class="nav-item"><a asp-action="About" asp-controller="Home" class="nav-link @(ViewData["ActiveAboutNavLink"] ?? string.Empty) as string">About</a></li>
                             <li class="nav-item">
                                 <a href="course.html" class="nav-link">Courses</a>
                                 <ul class="navbar-nav nav mx-auto">
@@ -160,33 +176,14 @@
             </div>
         </div>
             @RenderBody()
-        <footer>
+        <!-- Footer -->
+        <footer class="footer_2">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 col-sm-3 col-md-3 col-lg-3 p-0 ">
-                        <div class="shape_wrapper">
-                            <img src="images/shapes/bubble_shpe_1.png" alt="" class="shape_t_1">
-                            <img src="images/shapes/round_shpae_1.png" alt="" class="shape_t_2">
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-9 col-md-9 col-lg-9 p-0 become_techer_wrapper">
-                        <div class="become_a_teacher">
-                            <div class="title">
-                                <h2>Become A Instructor</h2>
-                                <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et.</p>
-                            </div><!-- ends: .section-header -->
-                            <div class="get_s_btn">
-                                <a href="#" title="">Get Started Now</a>
-                            </div>
-                            <img src="images/shapes/bubble_shpe_2.png" alt="" class="shape_t_1">
-                        </div>
-                    </div>
-                </div>
                 <div class="footer_top">
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-4">
                             <div class="footer_single_col footer_intro">
-                                <img src="images/logo2.png" alt="" class="f_logo">
+                                <img src="/images/logo2.png" alt="" class="f_logo">
                                 <p>Ante amet vitae vulputate odio nulla vel pretium pulvinar aenean. Rhoncus eget adipiscing etiam arcu. Ultricies justo ipsum nec amet.</p>
                             </div>
                         </div>
@@ -194,11 +191,11 @@
                             <div class="footer_single_col">
                                 <h3>Useful Links</h3>
                                 <ul class="location_info quick_inf0">
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Developers</a></li>
-                                    <li><a href="#">Services</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="#">Leadereship</a></li>
+                                    <li><a href="#">Company</a></li>
+                                    <li><a href="#">Diversity</a></li>
+                                    <li><a href="#">Jobs</a></li>
+                                    <li><a href="#">Press</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -206,18 +203,18 @@
                             <div class="footer_single_col information">
                                 <h3>information</h3>
                                 <ul class="quick_inf0">
-                                    <li><a href="#">Campus Tour</a></li>
-                                    <li><a href="#">Student Life</a></li>
-                                    <li><a href="#">Scholarship</a></li>
-                                    <li><a href="#">Admission</a></li>
-                                    <li><a href="#">Leadership</a></li>
+                                    <li><a href="#">Leadereship</a></li>
+                                    <li><a href="#">Company</a></li>
+                                    <li><a href="#">Diversity</a></li>
+                                    <li><a href="#">Jobs</a></li>
+                                    <li><a href="#">Press</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-4">
                             <div class="footer_single_col contact">
                                 <h3>Contact Us</h3>
-                                <p>Fell free to get in touch us via Phone or send us a message.</p>
+                                <p>Ante amet vitae vulputate odio nulla vel pretium aenean.</p>
                                 <div class="contact_info">
                                     <span>+000 124 325</span>
                                     <span class="email">info@yourdomain.com</span>
@@ -230,20 +227,19 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="col-12 col-md-12 col-lg-12">
+                            <div class="copyright">
+                                <a target="_blank" href="https://github.com/peterezz/EDU_Store">Our Project</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="round_shape">
-                <span class="shape_1"></span>
-                <span class="shape_2"></span>
-                <span class="shape_3"></span>
-                <span class="shape_4"></span>
-                <span class="shape_5"></span>
-                <span class="shape_6"></span>
+            <div class="shapes_bg">
+                <img src="/images/shapes/testimonial_2_shpe_1.png" alt="" class="shape_3">
+                <img src="/images/shapes/footer_2.png" alt="" class="shape_1">
             </div>
-            <img src="images/shapes/footer_bg_shpe_1.png" alt="" class="shapes1_footer">
         </footer><!-- End Footer -->
-
         <section id="scroll-top" class="scroll-top">
             <h2 class="disabled">Scroll to top</h2>
             <div class="to-top pos-rtive">
@@ -283,7 +279,7 @@
         <!-- =========================================================
              STYLE SWITCHER | ONLY FOR DEMO NOT INCLUDED IN MAIN FILES
         ============================================================== -->
-        <script type="text/javascript" src="js/demo.js"></script>
+        <script type="text/javascript" src="/js/demo.js"></script>
         </body>
 
 
