--- a/Edu_Store/Edu_Store/wwwroot/css/style.css
+++ b/Edu_Store/Edu_Store/wwwroot/css/style.css
@@ -4488,7 +4488,7 @@ footer {
   width: 100%; }
 
 .about_page .intro_wrapper {
-  background: url("../images/banner/inner_banner_1.jpg") no-repeat center center !important; }
+  background: url("../../images/banner/inner_banner_1.jpg") no-repeat center center !important; }
 
 .about_us {
   position: relative;
